--- a/Museum.Data/Museum.Data.csproj
+++ b/Museum.Data/Museum.Data.csproj
@@ -48,10 +48,10 @@
   <ItemGroup>
     <Compile Include="Context\MuseumContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\IGenericRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
